testcases/bindgen/225/error_message.txt
error[E0530]: function parameters cannot shadow statics
   --> ./open/225/generated_bindings.rs:191:27
    |
141 |     pub static mut foo: ::std::os::raw::c_int;
    |     ------------------------------------------ the static `foo` is defined here
...
191 |     pub fn new_bitfield_1(foo: ::std::os::raw::c_int) -> __Bi...
    |                           ^^^ cannot be named the same as a static

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0530`.
